@@ -44,6 +44,7 @@ Changes
 11/02/11 r416 Updated Windows installer
 
 Fixes
+12/07/17 Hybrid kills denora after sending PONG the wrong way (hopefully fixes #1420)
 12/07/17 Added account support to charybdis and shadowircd (fixes #1426)
 12/07/17 Made ss_exclude use lower() in queries (fixes #1240)
 12/07/17 Removed fnmatch from mysql_backup and now check result of file permission check properly
